// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a full article with all content items with dropcap template 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": undefined,
            }
          }
        >
          <Text
            style={
              Object {
                "color": undefined,
                "fontFamily": "TimesModern-Regular",
                "fontSize": 112.19999999999999,
                "left": 10.1435546875,
                "lineHeight": 112.19999999999999,
                "position": "absolute",
                "top": -8.5,
              }
            }
          >
            T
          </Text>
          <View
            style={
              Object {
                "height": 84,
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 72,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                his
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 98,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                be
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 117,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                ing
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 144,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                Black
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 189,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                His
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 214,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                tory
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 248,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                Month,
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 304,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                last
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 336,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                week
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingHorizontal": 10,
              }
            }
          >
            <InteractiveWrapper />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`2. an article with interactives 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingHorizontal": 10,
              }
            }
          >
            <InteractiveWrapper />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingHorizontal": 0,
                "width": "100%",
              }
            }
          >
            <InteractiveWrapper />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`3. an article with no content 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": undefined,
            }
          }
        >
          <ArticleExtras />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`4. an article with a nested markup in first paragraph displays a drop cap 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": undefined,
            }
          }
        >
          <Text
            style={
              Object {
                "color": undefined,
                "fontFamily": "TimesModern-Regular",
                "fontSize": 112.19999999999999,
                "left": 11.6875,
                "lineHeight": 112.19999999999999,
                "position": "absolute",
                "top": -8.5,
              }
            }
          >
            Q
          </Text>
          <View
            style={
              Object {
                "height": 84,
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 77,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                Some
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 124,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                years
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 169,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                ago
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 202,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                I
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 211,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                made
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 258,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                the
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 286,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                de
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 305,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                cision
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 354,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                to
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 373,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                take
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 409,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                as
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 432,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                a
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 77,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 28,
                  }
                }
              >
                friend
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 124,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 28,
                  }
                }
              >
                a
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 138,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 28,
                  }
                }
              >
                wo
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 160,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 28,
                  }
                }
              >
                man
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 198,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 28,
                  }
                }
              >
                who
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 234,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 28,
                  }
                }
              >
                is
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 251,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 28,
                  }
                }
              >
                very
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 287,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 28,
                  }
                }
              >
                opin
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 319,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 28,
                  }
                }
              >
                ion
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 342,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 28,
                  }
                }
              >
                ated.
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "height": 28,
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 0,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                When
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 47,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                she
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 78,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                does
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 119,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                come
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 166,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                to
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 185,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                so
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 204,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                cial
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 234,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                events,
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 291,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                she
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 323,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                dom
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 357,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                in
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 371,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                ates.
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`5. an article skeleton with responsive items 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": undefined,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "alignSelf": "center",
                "height": 28,
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
                "width": 660,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 0,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                This
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 36,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                be
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 55,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                ing
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 82,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                Black
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 128,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                His
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 153,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                tory
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 186,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                Month,
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 242,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                last
              </Text>
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 274,
                    "lineHeight": 28,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                week
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": undefined,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingHorizontal": 10,
              }
            }
          >
            <InteractiveWrapper />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;
